prevent stretching of product images

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -150,8 +150,8 @@ nav {
 }
 
 .product-thumbnail {
-    width: 200px;
-    height: 200px;
+    /* width: 200px; */
+    /* height: 200px; */
     display: block;
     margin: 0 auto;
     border: 0px;
